crates/svelte-parser/tests/snapshots/snapshots__implicitly_closed_li.snap
---
source: crates/svelte-parser/tests/snapshots.rs
expression: output
---
Source:
<ul>
    <li>one
    <li>two
    <li>three
</ul>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 48,
                    },
                    name: "ul",
                    attributes: [],
                    children: [
                        Element(
                            Element {
                                span: Span {
                                    start: 9,
                                    end: 17,
                                },
                                name: "li",
                                attributes: [],
                                children: [
                                    Text(
                                        Text {
                                            span: Span {
                                                start: 13,
                                                end: 17,
                                            },
                                            data: "one\n",
                                            is_whitespace: false,
                                        },
                                    ),
                                ],
                                self_closing: false,
                            },
                        ),
                        Element(
                            Element {
                                span: Span {
                                    start: 21,
                                    end: 29,
                                },
                                name: "li",
                                attributes: [],
                                children: [
                                    Text(
                                        Text {
                                            span: Span {
                                                start: 25,
                                                end: 29,
                                            },
                                            data: "two\n",
                                            is_whitespace: false,
                                        },
                                    ),
                                ],
                                self_closing: false,
                            },
                        ),
                        Element(
                            Element {
                                span: Span {
                                    start: 33,
                                    end: 43,
                                },
                                name: "li",
                                attributes: [],
                                children: [
                                    Text(
                                        Text {
                                            span: Span {
                                                start: 37,
                                                end: 43,
                                            },
                                            data: "three\n",
                                            is_whitespace: false,
                                        },
                                    ),
                                ],
                                self_closing: false,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 48,
        },
    },
    span: Span {
        start: 0,
        end: 48,
    },
}
