crates/svelte-parser/tests/snapshots/snapshots__implicitly_closed_li_block.snap
---
source: crates/svelte-parser/tests/snapshots.rs
expression: output
---
Source:
<ul>
    {#each items as item}
        <li>{item}
    {/each}
</ul>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 67,
                    },
                    name: "ul",
                    attributes: [],
                    children: [
                        EachBlock(
                            EachBlock {
                                span: Span {
                                    start: 9,
                                    end: 61,
                                },
                                expression_span: Span {
                                    start: 16,
                                    end: 21,
                                },
                                expression: "items",
                                context: "item",
                                context_span: Span {
                                    start: 25,
                                    end: 29,
                                },
                                index: None,
                                key: None,
                                body: Fragment {
                                    nodes: [
                                        Element(
                                            Element {
                                                span: Span {
                                                    start: 39,
                                                    end: 50,
                                                },
                                                name: "li",
                                                attributes: [],
                                                children: [
                                                    Expression(
                                                        ExpressionTag {
                                                            span: Span {
                                                                start: 43,
                                                                end: 49,
                                                            },
                                                            expression_span: Span {
                                                                start: 44,
                                                                end: 48,
                                                            },
                                                            expression: "item",
                                                        },
                                                    ),
                                                ],
                                                self_closing: false,
                                            },
                                        ),
                                    ],
                                    span: Span {
                                        start: 30,
                                        end: 50,
                                    },
                                },
                                fallback: None,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 67,
        },
    },
    span: Span {
        start: 0,
        end: 67,
    },
}
